 ingress-1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: descoshop
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - http:
      paths:
      - path: /descoshop
        pathType: Prefix
        backend:
          service: 
            name: descoshop
            port:
              number: 5000
